--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap');
 
-*{
+* {
     box-sizing: border-box;
     padding: 0px;
     background-color: hsl(0, 0%, 95%);
@@ -9,80 +9,81 @@
 
 
 /* Cards */
-a{
+a {
     color: #BC4749;
     font-size: 40px;
     margin: 0px auto;
-    margin-left: 300px;
+    display: inline-block;
     text-decoration: none;
 }
 
-.card{
+.card {
     display: flex;
     margin: 150px auto;
-    width: 64%;
+    width: 70%;
 }
 
-.card-1{
+.card-1 {
     background: hsl(31, 77%, 52%);
     padding: 50px;
-   
+
 }
 
-.img-card1{
+.img-card1 {
     background-color: hsl(31, 77%, 52%);
     padding-bottom: 10PX;
 }
 
 /* Buttons */
-.btn1{
+.btn1 {
     color: hsl(31, 77%, 52%);
-    margin-top:80px;
+    margin-top: 80px;
 }
 
-.btn1:hover{
+.btn1:hover {
     background-color: hsl(31, 77%, 52%);
 }
 
 
-.head1{
+.head1 {
     font-size: 25px;
     font-weight: 700;
     font-family: 'Big Shoulders Display', cursive;
-    color:  hsl(0, 0%, 95%);
-    background-color: hsl(31, 77%, 52%); 
+    color: hsl(0, 0%, 95%);
+    background-color: hsl(31, 77%, 52%);
     padding-bottom: 10PX;
 }
 
-.para1{
+.para1 {
     font-size: 15px;
     font-weight: 400;
     font-family: 'Lexend Deca', sans-serif;
     line-height: 30px;
     color: hsla(0, 0%, 100%, 0.75);
-    background-color: hsl(31, 77%, 52%); 
+    background-color: hsl(31, 77%, 52%);
 }
 
 
-.card-2{
+.card-2 {
     background: hsl(184, 100%, 22%);
     padding: 50px;
 }
-.img-card2{
+
+.img-card2 {
     background-color: hsl(184, 100%, 22%);
     padding-bottom: 10PX;
 }
 
-.head2{
+.head2 {
     font-size: 25px;
     font-weight: 700;
     font-family: 'Big Shoulders Display', cursive;
-    color:  hsl(0, 0%, 95%);
+    color: hsl(0, 0%, 95%);
     background-color: hsl(184, 100%, 22%);
     padding-bottom: 10PX;
 }
 
-.para2{
+.para2 {
     font-size: 15px;
     font-weight: 400;
     line-height: 30px;
@@ -93,35 +94,35 @@ a{
 
 
 /* Buttons */
-.btn2{
+.btn2 {
     color: hsl(184, 100%, 22%);
     margin-top: 80px;
 }
 
-.btn2:hover{
+.btn2:hover {
     background-color: hsl(184, 100%, 22%);
 }
 
-.card-3{
+.card-3 {
     background: hsl(179, 100%, 13%);
     padding: 50px;
 }
 
-.img-card3{
+.img-card3 {
     background-color: hsl(179, 100%, 13%);
     padding-bottom: 10PX;
 }
 
-.head3{
+.head3 {
     font-size: 25px;
     font-weight: 700;
     font-family: 'Big Shoulders Display', cursive;
-    color:  hsl(0, 0%, 95%);
+    color: hsl(0, 0%, 95%);
     background-color: hsl(179, 100%, 13%);
     padding-bottom: 10PX;
 }
 
-.para3{
+.para3 {
     font-size: 15px;
     font-weight: 400;
     line-height: 25px;
@@ -132,16 +133,18 @@ a{
 
 
 /* Buttons */
-.btn3{
+.btn3 {
     color: hsl(179, 100%, 13%);
     margin-top: 130px;
 }
 
-.btn3:hover{
+.btn3:hover {
     background-color: hsl(179, 100%, 13%);
 }
 
-.btn1,.btn2, .btn3{
+.btn1,
+.btn2,
+.btn3 {
     font-size: 15px;
     font-weight: 400;
     font-family: 'Lexend Deca', sans-serif;
@@ -154,7 +157,9 @@ a{
 }
 
 
-.btn1:hover, .btn2:hover, .btn3:hover{
+.btn1:hover,
+.btn2:hover,
+.btn3:hover {
     color: hsl(0, 0%, 95%);
     border: 2px solid hsl(0, 0%, 95%);
 }
@@ -164,46 +169,68 @@ a{
 
 /* media queries for 1440px screen*/
 @media screen and (max-width: 1440px) {
-    .btn3{
+    .btn3 {
         margin-top: 105px;
     }
 }
 
+@media screen and (max-width: 1024px) {
+
+    .btn1,
+    .btn2,
+    .btn3 {
+        padding: 5px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .card {
+        flex-wrap: wrap;
+    }
+}
 
 /* media queries for 375px screen*/
 
 @media screen and (max-width: 375px) {
 
-    .card{
+    .card {
         flex-wrap: wrap;
     }
 
-    .card1, .card2, .card3{
+    .card1,
+    .card2,
+    .card3 {
         padding: 0px;
     }
 
-    .para1, .para2, .para3{
+    .para1,
+    .para2,
+    .para3 {
         font-size: 10px;
     }
-    
-    .btn1, .btn2, .btn3{
+
+    .btn1,
+    .btn2,
+    .btn3 {
         font-size: 10px;
         border-radius: 10px;
         width: 100%;
         height: 40px;
     }
-    
-  
-    .btn1{
+
+
+    .btn1 {
         margin-top: 100px;
     }
-    .btn2{
+
+    .btn2 {
         margin-top: 130px;
     }
 
-    .btn3{
+    .btn3 {
         margin-top: 160px;
     }
-    
-}
 
+}
